--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -3,15 +3,15 @@ set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing benchmark's tests" FORC
 add_subdirectory(benchmark)
 include_directories(benchmark/include)
 
-set(bench_cc
-  primes_bench.cc
+set(bench_cpp
+  word_counting_bench.cpp
 )
 
-add_executable(bench_nemo ${bench_cc})
+add_executable(bench_word_counting ${bench_cpp})
 
-target_link_libraries(bench_nemo
+target_link_libraries(bench_word_counting
   benchmark
-  ${NEMO_LIB_NAME}
+  ${WORD_COUNTING_LIB_NAME}
   ${CMAKE_THREAD_LIBS_INIT}
   ${MATH_LIBS}
 )
