--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,23 +3,20 @@ add_subdirectory(gtest)
 include_directories(./gtest/googletest/include)
 
 set(test_src
-  run_all.cc
-  foo_test.cc
-  bar_test.cc
-  answer_test.cc
-  primes_test.cc
+  run_all.cpp
+  word_counting_test.cpp
 )
 
-add_executable(test_nemo ${test_src})
+add_executable(test_word_counting ${test_src})
 
-target_link_libraries(test_nemo
+target_link_libraries(test_word_counting
   gtest
-  ${NEMO_LIB_NAME}
+  ${WORD_COUNTING_LIB_NAME}
   ${CMAKE_THREAD_LIBS_INIT}
   ${MATH_LIBS}
 )
 
 add_test(
   NAME tests
-  COMMAND test_nemo
+  COMMAND test_word_counting
 )
