Got VS Code debugger working with the now-added launch.json. See README.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,14 +8,14 @@ set(word_counting_src
 add_library(${WORD_COUNTING_LIB_NAME} ${WORD_COUNTING_LIB_TYPE} ${word_counting_src})
 
 # Compile the executable
-add_executable(word_counting_exe main.cpp)
+add_executable(word_counting_driver word_counting_driver.cpp)
 
 # Link the executable to the word_counting library (and thread/math libs).
-target_link_libraries(word_counting_exe ${WORD_COUNTING_LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBS})
+target_link_libraries(word_counting_driver ${WORD_COUNTING_LIB_NAME} ${CMAKE_THREAD_LIBS_INIT} ${MATH_LIBS})
 
 # How and what to install
 install(TARGETS ${WORD_COUNTING_LIB_NAME} LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
-install(TARGETS word_counting_exe RUNTIME DESTINATION bin)
+install(TARGETS word_counting_driver RUNTIME DESTINATION bin)
 install(DIRECTORY ../include/word_counting DESTINATION include)
 
 
