Didn't really fix (CLion) CMake warnings because they are actually in submodules and I don't want to figure out the proper way to fork and maintain those. Also, leaving benchmark submodule intact but commenting out its add_directory in favor of my system-installed google benchmark version.
This works as do the gtest/ctests/driver, and all the CLion buttons seem to work really well. It even included a popup prompt for my laptop password to enable gdb/lldb's permission to attach to the main process. Very nice.

--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,7 +1,9 @@
 set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Suppressing benchmark's tests" FORCE)
 
-add_subdirectory(benchmark)
-include_directories(benchmark/include)
+# add_subdirectory(benchmark)
+# include_directories(benchmark/include)
+find_package(benchmark REQUIRED)
+#include_directories(${BENCHMARK_INCLUDE_DIRS})
 
 set(bench_cpp
   word_counting_bench.cpp
@@ -10,7 +12,8 @@ set(bench_cpp
 add_executable(bench_word_counting ${bench_cpp})
 
 target_link_libraries(bench_word_counting
-  benchmark
+        #benchmark
+  benchmark::benchmark
   ${WORD_COUNTING_LIB_NAME}
   ${CMAKE_THREAD_LIBS_INIT}
   ${MATH_LIBS}
