--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 # Source files (except the main for the executable):
 set(word_counting_src
   word_counting.cpp
+  database.cpp
 )
 
 # Compile the library
